# ward

./: .gitignore  BUILD.md  LICENSE  NOTICE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/mockups/: app-shell.html  menubar.html  organizer-home.html  security-flow.html  visual-style.html
docs/superpowers/plans/: 2026-07-04-plan-01-foundation.md  2026-07-04-plan-02-claude-categories-effective.md  2026-07-04-plan-03-mutations.md  2026-07-04-plan-04-mcp-controls.md  2026-07-04-plan-05-security-scanner.md  2026-07-04-plan-06-context-budget.md  2026-07-04-plan-07-sessions.md  2026-07-04-plan-08-backups.md  2026-07-04-plan-09-codex-adapter.md  2026-07-04-plan-10-native-shell.md  2026-07-04-plan-11-ward-as-mcp-server.md  2026-07-04-plan-12-packaging.md  2026-07-05-plan-13-native-shell-ux.md  2026-07-05-plan-14-usage-engine.md  2026-07-05-plan-15-glance-popover.md  2026-07-06-plan-18-editable-mcp-claude.md  README.md  (+10 more)
src/: App.tsx  api.test.ts  api.ts  index.tsx  plugins-api.test.ts  settings-api.test.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  effective.rs  error.rs  fs_utils.rs  lib.rs  main.rs  model.rs  tokenizer.rs
src-tauri/src/backup/: git.rs  mod.rs  scheduler.rs
src-tauri/src/harness/: framework.rs  mod.rs
src-tauri/src/harness/adapters/: claude.rs  claude_budget.rs  claude_mcp.rs  claude_ops.rs  codex.rs  codex_ops.rs  mod.rs
src-tauri/src/marketplace/: glama.rs  install.rs  mod.rs  registry.rs  skills.rs  smithery.rs
src-tauri/src/marketplace/fixtures/: glama-servers.json  marketplace.json  registry-servers.json  smithery-servers.json
src-tauri/src/mcp/: introspect.rs  mod.rs  server.rs
src-tauri/src/native/: anchor.rs  autostart.rs  lifecycle.rs  mod.rs  notify.rs  tray.rs  watch.rs
src-tauri/src/plugins/: catalog.rs  cli.rs  enable.rs  mod.rs
src-tauri/src/plugins/fixtures/: installed_plugins.json  known_marketplaces.json  marketplace.json  plugin-catalog-cache.json
src-tauri/src/security/: baseline.rs  deobfuscate.rs  judge.rs  mod.rs  rules.rs  scan.rs
src-tauri/src/sessions/: cost.rs  distill.rs  mod.rs  parse.rs  trim.rs
src-tauri/src/settings/: env.rs  mod.rs  read.rs  schema.rs  settings-catalog.json  write.rs
src-tauri/src/usage/: blocks.rs  cache.rs  claude.rs  codex.rs  live.rs  mod.rs
src/components/: Shell.tsx  Sidebar.test.tsx  Sidebar.tsx
src/entries/: Popover.cache.test.tsx  Popover.live.test.tsx  Popover.poll.test.tsx  Popover.test.tsx  Popover.tsx
src/mock/: dispatch.ts  fixtures.ts  install.ts  store.test.ts  store.ts
src/modes/: Backups.test.tsx  Backups.tsx  Budget.test.tsx  Budget.tsx  Marketplace.test.tsx  Marketplace.tsx  McpPolicy.tsx  Organizer.test.tsx  Organizer.tsx  Plugins.test.tsx  Plugins.tsx  Security.test.tsx  Security.tsx  Sessions.test.tsx  Sessions.tsx  Settings.test.tsx  Settings.tsx  path-format.test.ts
src/styles/: app.css  backups.css  budget.css  marketplace.css  organizer.css  plugins.css  popover.css  security.css  sessions.css  settings.css  tokens.css
tests/e2e/: README.md  backup.spec.ts  budget.spec.ts  move.spec.ts  package.json  scan.spec.ts  security.spec.ts  sessions.spec.ts  smoke.spec.ts  tsconfig.json  wdio.conf.ts
(+6 files in other folders)
