[package]
name = "ward"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
# Plan 05 — security scanner
sha2 = "0.10"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6"
base64 = "0.22"
unicode-normalization = "0.1"
# Plan 09 — Codex adapter (parses ~/.codex/config.toml)
toml = "0.8"
# Plan 10 — native shell (CLI, fs-watch, notifications, tray)
clap = { version = "4", features = ["derive"] }
notify = "6"
notify-debouncer-mini = "0.4"
# Plan 13 — launch-at-login (per-user LaunchAgent on macOS)
tauri-plugin-autostart = "2"
# Plan 16 — live Claude rate-limit fetch (single gated, user-triggered call).
# Lightweight blocking HTTP client (rustls, no async runtime).
ureq = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

# Plan 12 — production release profile for the distributable `.dmg`.
# Strip + LTO + codegen-units=1 + abort-on-panic shrinks the binary
# and prevents unwind tables from leaking into the macOS app bundle.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

